# EloRace

./: .gitignore  README.md  pyproject.toml
discord/: logger_config.py
discord_layer/: config.py  main.py
discord_layer/cogs/: player.py  race.py  summoner.py
discord_layer/views/: embeds.py
elorace/: database.py  logger_config.py  main.py  models.py  schemas.py
elorace/api/: riot_client.py
elorace/routers/: player.py  races.py  summoner.py
riot_api/: riot_client.py  summoner.py
